2004-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* gplt_x11.c: Print the debugging message "gnuplot_x11 3769: mouse
	button 1 from window 1 at 0 0" only #ifdef DEBUG.

2004-01-08  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp/configure.in: Remove superfluous file copying commands, now
	taken care of by auto* tools.

	* src/gplt_x11.c(pr_window): Bugfix: static array must be computable
	at compile time.

2004-01-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot.c, term/x11.trm: Set stdin to unbuffered on program entry
	rather than waiting for the start of an X11 plot. All buffered input
	is lost by the call to setvbuf(), so the only safe time to call it is
	before there is any input. This fixes the latest manifestation of the
	"x11 clipboard paste problem", and also the "piping from awk" problem.

2004-01-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in, configure.vms, src/fit.c, src/gplt_x11.c, src/stdfn.h,
	term/ggi.trm, term/x11.trm: Use AC_FUNC_SELECT_ARGTYPES instead of
	AC_FUNC_SELECT and related changes.

	* config/config.amg: Updated.

	* docs/gnuplot.doc: Removed whitespace-only line as pointed out by
	"make check".

	* m4/apple.m4, m4/beos.m4, m4/msdos.m4, m4/next.m4: Newer autoconf
	versions require stricter quoting.

2004-01-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm (X11_args) [!USE_MOUSE]: Don't try to parse
	"-nofeedback" option if mousing disabled.

	* src/command.c (test_palette_subcommand, test_time_subcommand):
	Made static; added missing local prototype.
	(test_palette_subcommand): Changed static const int "colors" to an
	enum to make it eligible as an array size under C90.  Renamed to
	"test_palette_colors" to avoid global name space contamination.
	Made several local string constant variables 'static', and removed
	a superfluous one. Reindented.

2004-01-06  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add webify.pl to distribution.
