@@ -1,5 +1,8 @@
 2004-01-10  Petr Mikulik  <mikulik@physics.muni.cz>
 
+	* pm3d.c (geomean4): Support negative values to help splot surfaces with
+	all color coordinates negative and "set pm3d corners2color geomean".
+
 	* gplt_x11.c: Print the debugging message "gnuplot_x11 3769: mouse
 	button 1 from window 1 at 0 0" only #ifdef DEBUG.
 
